--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 								</header>
 								<a href="#" class="image main"><img src="images/COPD Lung Image.png" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/PreciousAMJ/Statistical-Analysis-In-R/blob/main/7.1.%20%20Kaplan-Meier-plot-and-log-rank-test-in-survival-analysis.md" class="button large">View Project</a></li>
+									<li><a href="https://github.com/PreciousAMJ/Statistical-Analysis-In-R/blob/main/Survival%20Analysis/3.%20KM%20plot%20and%20log-rank%20test.md" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
@@ -141,7 +141,7 @@
 							<p>In this Project, I performed multiple linear regression to predict and model the relationship between 6 minute walk distance (MWT1Best, which is an assessment to measure the distance a person is capable of walking on a flat, hard surface in 6 minutes)
 								 using Age, Gender and PackHistory (a clinincal quantification of cigarette smoking) in patients with Chronic obstructive pulmonary disease (COPD).</p>
 							<ul class="actions special">
-								<li><a href="https://github.com/PreciousAMJ/Statistical-Analysis-In-R/blob/main/6.2.%20Multiple-Logistic-Regression.md" class="button">View Project </a></li>
+								<li><a href="https://github.com/PreciousAMJ/Statistical-Analysis-In-R/blob/main/Regression%20Analysis/3.%20Multiple%20Linear%20Regression.md" class="button">View Project </a></li>
 							</ul>
 					</article>
 					<article>
@@ -152,7 +152,7 @@
 						<a href="#" class="image fit"><img src="images/diabetic.jpg" alt="" /></a>
 						<p>In this Project, I modeled the odds of having diabetes based on age, gender and BMI, using diabetic patients dataset.</p>
 						<ul class="actions special">
-							<li><a href="https://github.com/PreciousAMJ/Statistical-Analysis-In-R/blob/main/6.2.%20Multiple-Logistic-Regression.md" class="button">View Project </a></li>
+							<li><a href="https://github.com/PreciousAMJ/Statistical-Analysis-In-R/blob/main/Regression%20Analysis/5.%20Multiple%20Logistic%20Regression.md" class="button">View Project </a></li>
 						</ul>
 					</article>
 					<article>
@@ -175,7 +175,7 @@
 				<a href="#" class="image fit"><img src="images/Heart failure 1.jpg" alt="" /></a>
 				<p>In this Project, I performed survival analysis on patients with heart failure based on different factors (age, ethnic group etc.) using cox proportional hazard method.</p>
 				<ul class="actions special">
-					<li><a href="https://github.com/PreciousAMJ/Statistical-Analysis-In-R/blob/main/7.2.%20Simple-cox-proportional-hazards-model%20Simple-cox-proportional-hazards-model.md" class="button">View Project </a></li>
+					<li><a href="https://github.com/PreciousAMJ/Statistical-Analysis-In-R/blob/main/Survival%20Analysis/2.%20multiple%20Cox%20model" class="button">View Project </a></li>
 				</ul>
 		</article>
 		<article>
@@ -187,7 +187,7 @@
 			<p>In this Project, I performed hypothesis testing to test if there's a difference between the mean BMI (body mass index) of patients who have cancer and patients who do not
 				i.e if there's a realtionship between BMI and cancer.</p>
 			<ul class="actions special">
-				<li><a href="https://github.com/PreciousAMJ/Statistical-Analysis-In-R/blob/main/2.3.%20Hypothesis-Test.md" class="button">View Project </a></li>
+				<li><a href="https://github.com/PreciousAMJ/Statistical-Analysis-In-R/blob/main/Hypothesis%20Testing/1.%20Parametric%20Tests/3.%20Hypothesis%20Test%202.md" class="button">View Project </a></li>
 			</ul>
 		</article>
 							</section>
