--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
 										<span class="date">October 15, 2022</span>
 										<h2><a href="#">Excel Cookie Sales Dashboard</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/Cookie Sales Dashboard.png" alt="" /></a>
-									<p>In this project, I cleaned, explored and analysed Cookie sales data to build a dynamic (interactive) dashboard in excel.</p>
+									<a href="#" class="image fit"><img src="images/Big Fashion Group Dashboard.png" alt="" /></a>
+									<p>The dashboard allows us to easily track sales trends by product, region, and time period, giving us a comprehensive view of our sales performance..</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/PreciousAMJ/Excel/blob/main/Cookie%20Sales%20Dashboard%202.png" class="button">View Project</a></li>
+										<li><a href=https://github.com/PreciousAMJ/Excel/blob/main/Big%20Fashion%20Group%20Dashboard.png class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
