--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 								<article>
 									<header>
 										<span class="date">October 15, 2022</span>
-										<h2><a href="#">Excel Cookie Sales Dashboard</a></h2>
+										<h2><a href="#">Big Fashion Group Dashboard</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/Big Fashion Group Dashboard.png" alt="" /></a>
 									<p>The dashboard allows us to easily track sales trends by product, region, and time period, giving us a comprehensive view of our sales performance..</p>
